# boot-manipulator

./: .gitignore  Cargo.toml  README.md
boot-manipulator/: Cargo.toml  build.rs
boot-manipulator/src/: console.rs  logging.rs  main.rs  polyfill.rs  spinlock.rs
boot-manipulator/src/arch/: mod.rs
boot-manipulator/src/arch/x86/: mod.rs
boot-manipulator/src/arch/x86/virtualization/: mod.rs
boot-manipulator/src/arch/x86_64/: control_regs.rs  logging.rs  mod.rs  virtualization.rs
boot-manipulator/src/arch/x86_64/registers/: control.rs  mod.rs  msr.rs
boot-manipulator/src/arch/x86_64/virtualization/: mod.rs  vmx.rs
boot-manipulator/src/arch/x86_common/: mod.rs
boot-manipulator/src/arch/x86_common/virtualization/: mod.rs
boot-manipulator/src/arch/x86_common/virtualization/vmx/: mod.rs
boot-manipulator/src/boot/: mod.rs  uefi.rs
boot-manipulator/src/hypervisor/: mod.rs
boot-manipulator/src/platform/: mod.rs  uefi.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs
