[package]
name = "xtask"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", default-features = false, features = ["fs"] }

[lints]
workspace = true
